# perfetto-mcp-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  PLAN.md  README.md  README.zh-CN.md  build.rs  glama.json  glama.yaml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml  release.yml
docs/: google-perfetto-mcp-analysis.md  google-perfetto-mcp-analysis.zh-CN.md  roadmap.md  roadmap.zh-CN.md
docs/plans/: m4-download-hardening.md  v0.6-pivot-execute-sql-nudge.zh-CN.md  v0.7-chrome-domain-tools-row-preserving.zh-CN.md  v0.8-binary-self-install.zh-CN.md
proto/: trace_processor.proto
src/: check_update.rs  download.rs  error.rs  install.rs  lib.rs  main.rs  query.rs  server.rs  tp_client.rs  tp_manager.rs
tests/: e2e_chrome_domain_tools.rs  e2e_chrome_scroll_jank.rs  e2e_smoke.rs  e2e_stdlib_include.rs  install_subcommand.rs
tests/fixtures/: basic.perfetto-trace  claude  codex  event_latency.perfetto-trace  github_release_response.json  histogram.perfetto-trace
