[package]
name = "perfetto-mcp-rs"
version = "0.1.0"
edition = "2021"
description = "MCP server for Perfetto trace analysis"
license = "Apache-2.0"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
futures-util = "0.3"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
which = "7"
lru = "0.12"

[build-dependencies]
prost-build = "0.13"
